--- a/test/README
+++ b/test/README
@@ -9,3 +9,59 @@ in the development cycle.
 
 More information about PlatformIO Unit Testing:
 - https://docs.platformio.org/en/latest/advanced/unit-testing/index.html
+
+
+// button test
+
+#define MODE_BTN 32
+#define OK_BTN 33
+#define LEFT_BTN 25
+#define RIGTH_BTN 27
+
+
+void setup() {
+  Serial.begin(9600);
+  pinMode(MODE_BTN, INPUT);
+  pinMode(OK_BTN, INPUT);
+  pinMode(LEFT_BTN, INPUT);
+  pinMode(RIGTH_BTN, INPUT);
+}
+
+void loop() {
+  if (digitalRead(MODE_BTN) == HIGH) Serial.println("MODE_BTN Pressed");
+  if (digitalRead(OK_BTN) == HIGH) Serial.println("OK_BTN Pressed");
+  if (digitalRead(LEFT_BTN) == HIGH) Serial.println("LEFT_BTN Pressed");
+  if (digitalRead(RIGTH_BTN) == HIGH) Serial.println("RIGHT_BTN Pressed");
+  delay(100);  // Debounce delay
+}
+
+//-------------------
+
+
+// test lora send
+
+#define NSS 5
+#define RST 14
+#define DIO0 26
+int count = 0;
+void setup() {
+  Serial.begin(9600);
+  while (!Serial);
+
+  LoRa.setPins(NSS, RST, DIO0);
+
+  if (!LoRa.begin(433E6)) {  // Set frequency to 433 MHz
+    Serial.println("LoRa initialization failed!");
+    while (1);
+  }
+  Serial.println("LoRa Initialized Successfully!");
+}
+
+void loop() {
+  Serial.println("Sending Test Packet...");
+  LoRa.beginPacket();
+  LoRa.print("Hello LoRa! ");
+  LoRa.print(count++);
+  LoRa.endPacket();
+  delay(2000);
+}
